--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #Database
-spring.datasource.url=jdbc:mysql://localhost:3308/demo
+spring.datasource.url=jdbc:mysql://localhost:3306/demo
 spring.datasource.username=root
 spring.datasource.password=12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -15,8 +15,14 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 spring.servlet.multipart.enabled=true
-
+server.port=4200
 upload.path=E:/Codegym123/file/
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
 spring.web.resources.static-locations=file:///${upload.path}
+
+google.app.id=80724656105-fg2ndheoujm7c7dd4ob1i9mq3ebdbjhb.apps.googleusercontent.com
+google.app.secret=PrmoOSPhKsilVqpzxrzjOoEU
+google.redirect.uri=http://localhost:4200/login-google
+google.link.get.token=https://accounts.google.com/o/oauth2/token
+google.link.get.user_info=https://www.googleapis.com/oauth2/v1/userinfo?access_token=
